ficxed overflow issue/firebase deploy

--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .hero__text-section {
@@ -56,8 +57,6 @@
   }
 
   .hero__splash {
-    position: absolute;
-    z-index: -1;
     right: -720px;
   }
 }
