--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,7 +14,8 @@ $gradient: linear-gradient(to left, #38d39f, #38a4d3);
   font-family: 'Lato', sans-serif;
 }
 
-html {
+html,
+body {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
